unpackaged/main/default/objects/Stage1_Opportunity_Snapshot__c/Stage1_Opportunity_Snapshot__c.object-meta.xml
<CustomObject>
    <description>For Stage 1 Opportunity analytical snapshot</description>
    <label>Stage 1 Opportunity Snapshot</label>
    <nameField>
        <label>Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage 1 Opportunity Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>