unpackaged/main/default/objects/Stage1_Opportunity_Snapshot__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Account Name</description>
    <label>Account Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>