unpackaged/main/default/objects/Stage1_Opportunity_Snapshot__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Opportunity Amount</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>