unpackaged/main/default/objects/Stage1_Opportunity_Snapshot__c/fields/CDM_CAM__c.field-meta.xml
<CustomField>
    <fullName>CDM_CAM__c</fullName>
    <description>CDM/CAM</description>
    <label>Opportunity Owner</label>
    <length>40</length>
    <type>Text</type>
</CustomField>