unpackaged/main/default/objects/Stage1_Opportunity_Snapshot__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Currency</description>
    <label>Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>