unpackaged/main/default/objects/Stage1_Opportunity_Snapshot__c/fields/Include_In_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include In Forecast</description>
    <label>Include In Forecast</label>
    <type>Checkbox</type>
</CustomField>