unpackaged/main/default/objects/Stage1_Opportunity_Snapshot__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>Opportunity Name</description>
    <label>Opportunity Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>