unpackaged/main/default/objects/Stage1_Opportunity_Snapshot__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Stage</description>
    <label>Stage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>