unpackaged/main/default/objects/Stage1_Opportunity_Snapshot__c/fields/Vertical_Market__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Market__c</fullName>
    <label>Industry/Vertical</label>
    <length>50</length>
    <type>Text</type>
</CustomField>